--- a/packages/ui/docs/package.json
+++ b/packages/ui/docs/package.json
@@ -48,7 +48,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "ssh://huoyuxuan@icode.baidu.com:8235/baidu/ee-fe/etui"
+        "url": "https://gitee.com/yuxuanhuo/osui/tree/master"
     },
     "author": "huoyuxuan",
     "license": "MIT"
