docs: 组件开发文档, 创建组件脚本

--- a/templates/component/package.json
+++ b/templates/component/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@osui/alert",
+    "name": "@osui/{componentName}",
     "version": "0.1.0",
     "description": "",
     "main": "dist/index.js",
