--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "storybook": "start-storybook -p 8777 -s public",
         "prepack": "yarn build",
         "version": "lerna version --conventional-commits --no-push",
-        "commit": "git-cz"
+        "commit": "git-cz",
+        "new-component": "sh scripts/new-component.sh"
     },
     "devDependencies": {
         "@commitlint/cli": "^9.1.1",
