--- a/packages/ui/timeline/package.json
+++ b/packages/ui/timeline/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@osui/alert",
+    "name": "@osui/timeline",
     "version": "0.1.2",
     "description": "",
     "main": "dist/index.js",
@@ -48,7 +48,7 @@
         "type": "git",
         "url": "https://gitee.com/yuxuanhuo/osui/tree/master"
     },
-    "author": "huoyuxuan,zhusen",
+    "author": "huoyuxuan",
     "license": "MIT",
     "dependencies": {
         "classnames": "^2.2.6"
