--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "workspaces": [
         "packages/*",
-        "packages/ui/*"
+        "packages/ui/*",
+        "packages/ui-icons/*"
     ],
     "name": "osui-monorepo",
     "description": "通用组件库",
