fix(icons): 修复icons build时的问题

--- a/packages/ui-icons/osui-icons/package.json
+++ b/packages/ui-icons/osui-icons/package.json
@@ -6,7 +6,8 @@
     "name": "zhanglili01,huoyuxuan,lisiqi06,guyiling"
   },
   "scripts": {
-    "build": "sh scripts/build.sh",
+    "build": "yarn workspace @osui/icons-builder generate && sh scripts/build.sh",
+    "build-icons-only": "sh scripts/build.sh",
     "prepublishOnly": "npm run build"
   },
   "main": "dist/cjs/index.js",
