--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "prepack": "yarn build",
         "version": "lerna version --conventional-commits --no-push",
         "commit": "git-cz",
-        "new-component": "sh scripts/new-component.sh"
+        "new-component": "sh scripts/new-component.sh",
+        "copy-to-docs": "sh scripts/copy-to-docs.sh"
     },
     "devDependencies": {
         "@commitlint/cli": "^9.1.1",
