--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "cz-conventional-changelog": "^3.2.0",
         "husky": "^4.2.5",
         "lerna": "^3.22.1",
+        "mkdirp": "^1.0.4",
         "rimraf": "^3.0.2",
         "typescript": "^3.9.7"
     },
