feat: 添加directory-navigator组件

--- a/packages/ui/directory-navigator/package.json
+++ b/packages/ui/directory-navigator/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@osui/tree",
+    "name": "@osui/directory-navigator",
     "version": "0.1.0",
     "description": "",
     "main": "dist/index.js",
