--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "author": "osc,baidu",
     "license": "MIT",
     "scripts": {
-        "lint": "yarn workpspaces lint",
-        "build": "lerna run --stream --sort build",
+        "lint": "yarn workspaces run lint",
+        "build": "lerna run --stream --sort buyarild",
         "clean": "yarn workspaces run clean",
         "storybook": "start-storybook -p 8777 -s public",
         "prepack": "yarn build",
