--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "license": "MIT",
     "scripts": {
         "lint": "yarn workspaces run lint",
-        "build": "lerna run --stream --sort buyarild",
+        "build": "lerna run --stream --sort build",
         "clean": "yarn workspaces run clean",
         "storybook": "start-storybook -p 8777 -s public",
         "prepack": "yarn build",
