--- a/packages/ui/back-top/package.json
+++ b/packages/ui/back-top/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/back-top",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -56,6 +56,6 @@
         }
     },
     "dependencies": {
-        "@osui/icons": "0.1.0"
+        "@osui/icons": "^0.2.0"
     }
 }
