--- a/packages/ui-theme/package.json
+++ b/packages/ui-theme/package.json
@@ -47,5 +47,7 @@
     "url": "https://gitee.com/yuxuanhuo/osui/tree/master"
   },
   "author": "huoyuxuan",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+  }
 }
