--- a/packages/ui-icons/icons-builder/package.json
+++ b/packages/ui-icons/icons-builder/package.json
@@ -27,5 +27,8 @@
     "stringify-object": "^3.3.0",
     "svgo": "^1.3.2",
     "svgson": "^4.1.0"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6"
   }
 }
