--- a/packages/ui/back-top/package.json
+++ b/packages/ui/back-top/package.json
@@ -56,6 +56,7 @@
         }
     },
     "dependencies": {
-        "@osui/icons": "^0.2.0"
+        "@osui/icons": "^0.2.0",
+        "classnames": "^2.2.6"
     }
 }
