--- a/packages/ui/badge/package.json
+++ b/packages/ui/badge/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/badge",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -56,5 +56,6 @@
         }
     },
     "dependencies": {
+        "classnames": "^2.2.6"
     }
 }
