--- a/packages/ui/input/package.json
+++ b/packages/ui/input/package.json
@@ -54,5 +54,8 @@
         "hooks": {
             "pre-commit": "skr lint ./src"
         }
+    },
+    "dependencies": {
+        "classnames": "^2.2.6"
     }
 }
