--- a/packages/ui/tag/package.json
+++ b/packages/ui/tag/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/tag",
-    "version": "0.1.1",
+    "version": "0.2.0",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -54,5 +54,8 @@
         "hooks": {
             "pre-commit": "skr lint ./src"
         }
+    },
+    "dependencies": {
+        "classnames": "^2.2.6"
     }
 }
