--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -34,5 +34,9 @@
         "hooks": {
             "pre-commit": "skr lint ./src"
         }
+    },
+    "dependencies": {
+        "@osui/icons": "0.2.0",
+        "classnames": "^2.2.6"
     }
 }
