--- a/packages/ui-theme/package.json
+++ b/packages/ui-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@osui/theme",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -47,7 +47,5 @@
     "url": "https://gitee.com/yuxuanhuo/osui/tree/master"
   },
   "author": "huoyuxuan",
-  "license": "MIT",
-  "dependencies": {
-  }
+  "license": "MIT"
 }
