--- a/packages/ui/alert/package.json
+++ b/packages/ui/alert/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/alert",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -51,7 +51,7 @@
     "author": "huoyuxuan,zhusen",
     "license": "MIT",
     "dependencies": {
-        "@osui/icons": "0.2.0",
+        "@osui/icons": "^0.3.0",
         "classnames": "^2.2.6"
     }
 }
