--- a/templates/component/package.json
+++ b/templates/component/package.json
@@ -55,6 +55,10 @@
             "pre-commit": "skr lint ./src"
         }
     },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.com"
+    },
     "dependencies": {
     }
 }
