--- a/packages/ui-icons/osui-icons/package.json
+++ b/packages/ui-icons/osui-icons/package.json
@@ -46,5 +46,9 @@
   },
   "dependencies": {
     "classnames": "^2.2.6"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.com"
   }
 }
