--- a/packages/ui/markdown/package.json
+++ b/packages/ui/markdown/package.json
@@ -61,5 +61,10 @@
         "remark": "^12.0.1",
         "remark-html": "^12.0.0",
         "unist-util-visit": "^2.0.3"
-    }
+    },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.com"
+    },
+    "gitHead": "d22c04b87ec8dc035e148bc616e0db1eac8afd98"
 }
