--- a/packages/ui/message/package.json
+++ b/packages/ui/message/package.json
@@ -54,5 +54,10 @@
     "dependencies": {
         "classnames": "^2.2.6",
         "lodash.partial": "^4.2.1"
-    }
+    },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.com"
+    },
+    "gitHead": "d22c04b87ec8dc035e148bc616e0db1eac8afd98"
 }
