--- a/packages/ui/tag/package.json
+++ b/packages/ui/tag/package.json
@@ -57,5 +57,10 @@
     },
     "dependencies": {
         "classnames": "^2.2.6"
-    }
+    },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.com"
+    },
+    "gitHead": "d22c04b87ec8dc035e148bc616e0db1eac8afd98"
 }
