--- a/examples/create-react-app/my-app/package.json
+++ b/examples/create-react-app/my-app/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^5.6.4",
     "@osui/theme": "^0.3.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.5.4",
-    "craco-less": "^1.17.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
@@ -36,8 +34,8 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "less-plugin-functions": "^1.0.0",
-    "less-vars-to-js": "^1.3.0",
-    "style-resources-loader": "^1.3.3"
+    "@craco/craco": "^5.6.4",
+    "@reskript/config-webpack": "^0.11.2",
+    "less-vars-to-js": "^1.3.0"
   }
 }
