--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -37,7 +37,11 @@
     },
     "dependencies": {
         "@osui/icons": "^0.3.1",
-        "classnames": "^2.2.6"
+        "classnames": "^2.2.6",
+        "github-markdown-css": "^4.0.0",
+        "lodash.partial": "^4.2.1",
+        "remark": "^12.0.1",
+        "remark-html": "^12.0.0"
     },
     "publishConfig": {
         "access": "public",
