--- a/packages/ui/modal/package.json
+++ b/packages/ui/modal/package.json
@@ -51,6 +51,7 @@
     "author": "huoyuxuan,liushaozhen",
     "license": "MIT",
     "dependencies": {
+        "@osui/button": "0.3.2",
         "classnames": "^2.2.6"
     },
     "publishConfig": {
