--- a/packages/ui/branch-dropdown/package.json
+++ b/packages/ui/branch-dropdown/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/branch-dropdown",
-    "version": "0.3.0",
+    "version": "0.4.0",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -56,7 +56,7 @@
         }
     },
     "dependencies": {
-        "@osui/button": "0.3.2",
-        "@osui/icons": "0.3.1"
+        "@osui/button": "^0.4.0",
+        "@osui/icons": "^0.4.0"
     }
 }
