--- a/packages/ui/modal/package.json
+++ b/packages/ui/modal/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/modal",
-    "version": "0.3.2",
+    "version": "0.4.0",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -51,7 +51,7 @@
     "author": "huoyuxuan,liushaozhen",
     "license": "MIT",
     "dependencies": {
-        "@osui/button": "0.3.2",
+        "@osui/button": "^0.4.0",
         "classnames": "^2.2.6"
     },
     "publishConfig": {
