--- a/packages/ui/pagination/package.json
+++ b/packages/ui/pagination/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/pagination",
-    "version": "0.3.0",
+    "version": "0.4.0",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -56,7 +56,7 @@
         }
     },
     "dependencies": {
-        "@osui/icons": "0.3.1",
+        "@osui/icons": "^0.4.0",
         "classnames": "^2.2.6"
     }
 }
