--- a/packages/ui/toggle-button/package.json
+++ b/packages/ui/toggle-button/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/toggle-button",
-    "version": "0.3.0",
+    "version": "0.4.0",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -59,6 +59,6 @@
         "@huse/boolean": "^1.0.2",
         "@huse/click-outside": "^1.0.1",
         "@huse/derived-state": "^1.0.1",
-        "@osui/icons": "0.3.1"
+        "@osui/icons": "^0.4.0"
     }
 }
