--- a/packages/ui/toggle-button/package.json
+++ b/packages/ui/toggle-button/package.json
@@ -60,5 +60,6 @@
         "@huse/click-outside": "^1.0.1",
         "@huse/derived-state": "^1.0.1",
         "@osui/icons": "^0.4.0"
-    }
+    },
+    "gitHead": "320043d84865d42bb137764885b161e844002087"
 }
