--- a/packages/ui-icons/osui-icons/package.json
+++ b/packages/ui-icons/osui-icons/package.json
@@ -51,5 +51,6 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.com"
-  }
+  },
+  "gitHead": "320043d84865d42bb137764885b161e844002087"
 }
