--- a/packages/ui/branch-dropdown/package.json
+++ b/packages/ui/branch-dropdown/package.json
@@ -58,5 +58,6 @@
     "dependencies": {
         "@osui/button": "^0.4.0",
         "@osui/icons": "^0.4.0"
-    }
+    },
+    "gitHead": "320043d84865d42bb137764885b161e844002087"
 }
