--- a/packages/ui/menu-dropdown/package.json
+++ b/packages/ui/menu-dropdown/package.json
@@ -57,5 +57,10 @@
     },
     "dependencies": {
         "classnames": "^2.2.6"
-    }
+    },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.com"
+    },
+    "gitHead": "320043d84865d42bb137764885b161e844002087"
 }
