--- a/packages/ui/tabs/package.json
+++ b/packages/ui/tabs/package.json
@@ -54,5 +54,6 @@
         "hooks": {
             "pre-commit": "skr lint ./src"
         }
-    }
+    },
+    "gitHead": "320043d84865d42bb137764885b161e844002087"
 }
