--- a/packages/ui/branch-dropdown/package.json
+++ b/packages/ui/branch-dropdown/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/branch-dropdown",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -56,8 +56,12 @@
         }
     },
     "dependencies": {
-        "@osui/button": "^0.4.0",
-        "@osui/icons": "^0.4.0"
+        "@osui/button": "^0.4.1",
+        "@osui/icons": "^0.4.1"
     },
-    "gitHead": "320043d84865d42bb137764885b161e844002087"
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.com"
+    },
+    "gitHead": "d14770e91575397ea2a3701d8a62c575390df9ed"
 }
