--- a/packages/ui/tabs/package.json
+++ b/packages/ui/tabs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/tabs",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -55,5 +55,9 @@
             "pre-commit": "skr lint ./src"
         }
     },
-    "gitHead": "320043d84865d42bb137764885b161e844002087"
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.com"
+    },
+    "gitHead": "f77d1e9647b040fb6b4681cca99900d94f9fbc19"
 }
