--- a/packages/ui/alert/package.json
+++ b/packages/ui/alert/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "lint": "skr lint",
         "build": "sh scripts/build.sh",
+        "prepublishOnly": "yarn run build",
         "storybook": "start-storybook -p 8700",
         "clean": "rm -rf node_modules && rm -rf dist",
         "test": "echo \"Error: no test specified\" && exit 1"
