--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/ui",
-    "version": "0.5.5",
+    "version": "0.5.6",
     "description": "",
     "main": "dist/index.js",
     "module": "dist/index.js",
@@ -40,8 +40,8 @@
         "@osui/avatar": "^0.5.1",
         "@osui/back-top": "^0.5.1",
         "@osui/badge": "^0.5.1",
-        "@osui/branch-dropdown": "^0.5.3",
-        "@osui/button": "^0.5.3",
+        "@osui/branch-dropdown": "^0.5.4",
+        "@osui/button": "^0.5.4",
         "@osui/checkbox": "^0.5.1",
         "@osui/collapse": "^0.5.1",
         "@osui/date-picker": "^0.5.1",
@@ -53,14 +53,14 @@
         "@osui/markdown": "^0.5.1",
         "@osui/menu-dropdown": "^0.5.1",
         "@osui/message": "^0.5.1",
-        "@osui/modal": "^0.5.3",
+        "@osui/modal": "^0.5.4",
         "@osui/pagination": "^0.5.1",
         "@osui/popover": "^0.5.1",
         "@osui/progress": "^0.5.1",
         "@osui/radio": "^0.5.1",
         "@osui/search-select-list": "^0.5.1",
         "@osui/select": "^0.5.4",
-        "@osui/space": "0.5.2",
+        "@osui/space": "^0.5.3",
         "@osui/switch": "^0.5.1",
         "@osui/table": "^0.5.1",
         "@osui/tabs": "^0.5.1",
