feat: 调整alert功能和icloud theme

--- a/packages/ui/alert/package.json
+++ b/packages/ui/alert/package.json
@@ -38,6 +38,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-is": "^16.13.1",
+        "react-router-dom": "^5.2.0",
         "typescript": "^3.9.6"
     },
     "peerDependencies": {
@@ -52,6 +53,8 @@
     "author": "huoyuxuan,zhusen",
     "license": "MIT",
     "dependencies": {
+        "@huse/boolean": "^1.0.3",
+        "@huse/timeout": "^1.0.2",
         "@osui/icons": "^0.5.0",
         "classnames": "^2.2.6"
     },
