--- a/packages/ui/docs/icloud/package.json
+++ b/packages/ui/docs/icloud/package.json
@@ -39,6 +39,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-is": "^16.13.1",
+        "react-omni-link": "^2.1.1",
         "typescript": "^3.9.6"
     },
     "peerDependencies": {
