--- a/packages/ui/space/package.json
+++ b/packages/ui/space/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/space",
-    "version": "0.5.3",
+    "version": "0.6.0",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
@@ -59,5 +59,6 @@
     "publishConfig": {
         "access": "public",
         "registry": "https://registry.npmjs.com"
-    }
+    },
+    "gitHead": "904178b6c0bb86963017122daa529580decb66e8"
 }
