--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/ui",
-    "version": "0.6.4",
+    "version": "0.6.5",
     "description": "",
     "main": "dist/index.js",
     "module": "dist/index.js",
@@ -44,52 +44,52 @@
     },
     "dependencies": {
         "@osui/alert": "^0.6.2",
-        "@osui/auto-complete": "0.6.0",
+        "@osui/auto-complete": "^0.6.1",
         "@osui/avatar": "^0.6.1",
         "@osui/back-top": "^0.6.1",
         "@osui/badge": "^0.6.1",
         "@osui/branch-dropdown": "^0.6.2",
-        "@osui/breadcrumb": "0.6.0",
+        "@osui/breadcrumb": "^0.6.1",
         "@osui/button": "^0.6.2",
-        "@osui/cascader": "0.6.0",
+        "@osui/cascader": "^0.6.1",
         "@osui/checkbox": "^0.6.2",
-        "@osui/col": "0.6.0",
-        "@osui/collapse": "^0.6.1",
+        "@osui/col": "^0.6.1",
+        "@osui/collapse": "^0.6.2",
         "@osui/date-picker": "^0.6.1",
         "@osui/directory-navigator": "^0.6.1",
         "@osui/drawer": "^0.6.1",
-        "@osui/dropdown": "0.6.0",
-        "@osui/empty": "0.6.0",
+        "@osui/dropdown": "^0.6.1",
+        "@osui/empty": "^0.6.1",
         "@osui/form": "^0.6.3",
         "@osui/icons": "^0.6.1",
         "@osui/input": "^0.6.2",
-        "@osui/input-number": "0.6.0",
-        "@osui/list": "0.6.0",
+        "@osui/input-number": "^0.6.1",
+        "@osui/list": "^0.6.1",
         "@osui/markdown": "^0.6.1",
-        "@osui/menu": "0.6.0",
+        "@osui/menu": "^0.6.1",
         "@osui/menu-dropdown": "^0.6.1",
-        "@osui/message": "^0.6.2",
+        "@osui/message": "^0.6.3",
         "@osui/modal": "^0.6.2",
         "@osui/pagination": "^0.6.2",
         "@osui/popover": "^0.6.2",
-        "@osui/progress": "^0.6.1",
+        "@osui/progress": "^0.6.2",
         "@osui/radio": "^0.6.2",
-        "@osui/row": "0.6.0",
+        "@osui/row": "^0.6.1",
         "@osui/search-select-list": "^0.6.1",
         "@osui/select": "^0.6.2",
         "@osui/space": "^0.6.1",
-        "@osui/spin": "0.6.0",
-        "@osui/steps": "0.6.0",
-        "@osui/switch": "^0.6.1",
-        "@osui/table": "^0.6.1",
+        "@osui/spin": "^0.6.1",
+        "@osui/steps": "^0.6.1",
+        "@osui/switch": "^0.6.2",
+        "@osui/table": "^0.6.2",
         "@osui/tabs": "^0.6.2",
-        "@osui/tag": "^0.6.1",
-        "@osui/time-picker": "0.6.0",
-        "@osui/timeline": "^0.6.1",
+        "@osui/tag": "^0.6.2",
+        "@osui/time-picker": "^0.6.1",
+        "@osui/timeline": "^0.6.2",
         "@osui/toggle-button": "^0.6.1",
         "@osui/tooltip": "^0.6.1",
-        "@osui/tree": "0.6.0",
-        "@osui/tree-select": "0.6.0",
+        "@osui/tree": "^0.6.1",
+        "@osui/tree-select": "^0.6.1",
         "classnames": "^2.2.6",
         "github-markdown-css": "^4.0.0",
         "lodash.partial": "^4.2.1",
