--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
         "skipLibCheck": true,
         "declaration":true,
         "allowSyntheticDefaultImports": true
-    }
+    },
+    "exclude": ["commitlint.config.js"]
 }
