--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "version": "lerna version --conventional-commits --no-push",
         "commit": "git-cz",
         "new-component": "sh scripts/new-component.sh",
-        "copy-to-docs": "sh scripts/copy-to-docs.sh"
+        "copy-to-docs": "sh scripts/copy-to-docs.sh",
+        "publish": "lerna publish from-package"
     },
     "devDependencies": {
         "@commitlint/cli": "^9.1.1",
