chore: ui包增加新组件

--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -50,7 +50,9 @@
         }
     },
     "dependencies": {
+        "@osui/affix": "0.8.1",
         "@osui/alert": "^0.8.3",
+        "@osui/anchor": "0.8.1",
         "@osui/auto-complete": "^0.8.4",
         "@osui/avatar": "^0.8.3",
         "@osui/back-top": "^0.8.3",
@@ -58,12 +60,14 @@
         "@osui/branch-dropdown": "^0.8.3",
         "@osui/breadcrumb": "^0.8.4",
         "@osui/button": "^0.8.3",
+        "@osui/calendar": "0.8.1",
         "@osui/cascader": "^0.8.4",
         "@osui/checkbox": "^0.8.3",
         "@osui/col": "^0.8.4",
         "@osui/collapse": "^0.8.3",
         "@osui/date-picker": "^0.8.3",
         "@osui/directory-navigator": "^0.8.3",
+        "@osui/divider": "0.8.1",
         "@osui/drawer": "^0.8.4",
         "@osui/dropdown": "^0.8.4",
         "@osui/empty": "^0.8.4",
@@ -77,15 +81,22 @@
         "@osui/menu-dropdown": "^0.8.4",
         "@osui/message": "^0.8.3",
         "@osui/modal": "^0.8.3",
+        "@osui/notification": "0.8.1",
+        "@osui/page-header": "0.8.1",
         "@osui/pagination": "^0.8.3",
+        "@osui/popconfirm": "0.8.1",
         "@osui/popover": "^0.8.3",
         "@osui/progress": "^0.8.3",
         "@osui/radio": "^0.8.5",
+        "@osui/rate": "0.8.1",
+        "@osui/result": "0.8.1",
         "@osui/row": "^0.8.4",
         "@osui/search-select-list": "^0.8.3",
         "@osui/select": "^0.8.3",
+        "@osui/slider": "0.8.1",
         "@osui/space": "^0.8.3",
         "@osui/spin": "^0.8.4",
+        "@osui/statistic": "0.8.1",
         "@osui/steps": "^0.8.4",
         "@osui/switch": "^0.8.3",
         "@osui/table": "^0.8.4",
@@ -95,6 +106,7 @@
         "@osui/timeline": "^0.8.3",
         "@osui/toggle-button": "^0.8.4",
         "@osui/tooltip": "^0.8.3",
+        "@osui/transfer": "0.8.1",
         "@osui/tree": "^0.8.4",
         "@osui/tree-select": "^0.8.4",
         "classnames": "^2.2.6",
