chore: lerna release on master

--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,7 @@
     "useWorkspaces": true,
     "command": {
         "version": {
-            "allowBranch": "release",
+            "allowBranch": "master",
             "ignoreChanges": [
                 "**/*.md",
                 "**/stories/**",
