fix: menu-dropdown换用osui的组件

--- a/packages/ui/menu-dropdown/package.json
+++ b/packages/ui/menu-dropdown/package.json
@@ -66,6 +66,8 @@
         }
     },
     "dependencies": {
+        "@osui/dropdown": "^0.8.5",
+        "@osui/menu": "^0.8.4",
         "classnames": "^2.2.6"
     },
     "publishConfig": {
