--- a/packages/ui/collapse/package.json
+++ b/packages/ui/collapse/package.json
@@ -61,6 +61,7 @@
     "author": "huoyuxuan,liushaozhen",
     "license": "MIT",
     "dependencies": {
+        "@osui/brand-provider": "0.8.1",
         "@osui/icons": "^0.8.3",
         "classnames": "^2.2.6"
     },
