--- a/packages/ui/collapse/package.json
+++ b/packages/ui/collapse/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/collapse",
-    "version": "0.8.3",
+    "version": "0.8.4",
     "description": "",
     "main": "es/index.js",
     "module": "es/index.js",
@@ -61,7 +61,7 @@
     "author": "huoyuxuan,liushaozhen",
     "license": "MIT",
     "dependencies": {
-        "@osui/brand-provider": "0.8.1",
+        "@osui/brand-provider": "^0.8.2",
         "@osui/icons": "^0.8.3",
         "classnames": "^2.2.6"
     },
