--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/ui",
-    "version": "0.8.15",
+    "version": "0.8.16",
     "description": "",
     "main": "es/index.js",
     "module": "es/index.js",
@@ -58,7 +58,7 @@
         "@osui/back-top": "^0.8.4",
         "@osui/badge": "^0.8.4",
         "@osui/branch-dropdown": "^0.8.4",
-        "@osui/brand-provider": "0.8.1",
+        "@osui/brand-provider": "^0.8.2",
         "@osui/breadcrumb": "^0.8.4",
         "@osui/button": "^0.8.4",
         "@osui/calendar": "^0.9.0",
@@ -67,7 +67,7 @@
         "@osui/cascader": "^0.8.4",
         "@osui/checkbox": "^0.8.3",
         "@osui/col": "^0.8.4",
-        "@osui/collapse": "^0.8.3",
+        "@osui/collapse": "^0.8.4",
         "@osui/comment": "^0.8.2",
         "@osui/config-provider": "^0.8.2",
         "@osui/date-picker": "^0.8.3",
@@ -90,7 +90,7 @@
         "@osui/menu": "^0.8.4",
         "@osui/menu-dropdown": "^0.8.5",
         "@osui/message": "^0.8.4",
-        "@osui/modal": "^0.8.6",
+        "@osui/modal": "^0.8.7",
         "@osui/notification": "^0.9.1",
         "@osui/page-header": "^0.9.0",
         "@osui/pagination": "^0.8.3",
