--- a/packages/ui/form/package.json
+++ b/packages/ui/form/package.json
@@ -69,5 +69,8 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "904178b6c0bb86963017122daa529580decb66e8"
+    "gitHead": "904178b6c0bb86963017122daa529580decb66e8",
+    "dependencies": {
+        "@osui/brand-provider": "^0.8.2"
+    }
 }
