--- a/packages/ui/drawer/package.json
+++ b/packages/ui/drawer/package.json
@@ -66,6 +66,7 @@
         }
     },
     "dependencies": {
+        "@osui/icons": "^0.8.5",
         "classnames": "^2.2.6"
     },
     "publishConfig": {
