--- a/packages/ui/table/package.json
+++ b/packages/ui/table/package.json
@@ -66,6 +66,7 @@
         }
     },
     "dependencies": {
+        "@osui/pagination": "0.8.7",
         "classnames": "^2.2.6"
     },
     "publishConfig": {
