--- a/packages/ui/button/package.json
+++ b/packages/ui/button/package.json
@@ -66,6 +66,7 @@
         }
     },
     "dependencies": {
+        "@osui/icons": "^0.8.6",
         "classnames": "^2.2.6"
     },
     "publishConfig": {
