--- a/examples/webpack-project/my-app/package.json
+++ b/examples/webpack-project/my-app/package.json
@@ -8,7 +8,7 @@
     "start": "webpack serve"
   },
   "repository": {
-    "type": "git",
+    "type": "git"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
+    "less-plugin-functions": "^1.0.0",
+    "less-plugin-import": "^1.0.0",
     "mini-css-extract-plugin": "^1.3.3",
     "style-loader": "^2.0.0",
     "style-resources-loader": "^1.4.1",
@@ -32,9 +34,10 @@
     "@osui/button": "^0.10.0-beta.0",
     "@osui/drawer": "^0.10.0-beta.0",
     "@osui/icloud-theme": "^0.10.0-beta.0",
-    "antd": "^4.9.4",
+    "@osui/input": "^0.10.0",
+    "antd": "^4.10.0",
     "less": "3.12.2",
-    "less-loader": "5.0.0",
+    "less-loader": "^7.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
