--- a/packages/ui/search-select-list/package.json
+++ b/packages/ui/search-select-list/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/search-select-list",
-    "version": "0.10.0",
+    "version": "0.10.1",
     "description": "",
     "main": "es/index.js",
     "module": "es/index.js",
@@ -66,8 +66,8 @@
         }
     },
     "dependencies": {
-        "classnames": "^2.2.6",
-        "@osui/icons": "^0.10.0"
+        "@osui/icons": "^0.10.1",
+        "classnames": "^2.2.6"
     },
     "publishConfig": {
         "access": "public",
