--- a/packages/ui/menu-dropdown/package.json
+++ b/packages/ui/menu-dropdown/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/menu-dropdown",
-    "version": "0.10.0",
+    "version": "0.10.1",
     "description": "",
     "main": "es/index.js",
     "module": "es/index.js",
@@ -66,11 +66,11 @@
         }
     },
     "dependencies": {
-        "@osui/dropdown": "^0.10.0",
+        "@osui/dropdown": "^0.10.1",
+        "@osui/icons": "^0.10.1",
         "@osui/menu": "^0.10.0",
-        "@osui/toggle-button": "^0.10.0",
-        "classnames": "^2.2.6",
-        "@osui/icons": "^0.10.0"
+        "@osui/toggle-button": "^0.10.1",
+        "classnames": "^2.2.6"
     },
     "publishConfig": {
         "access": "public",
