--- a/packages/ui/modal/package.json
+++ b/packages/ui/modal/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/modal",
-    "version": "0.10.1",
+    "version": "0.10.2",
     "description": "",
     "main": "es/index.js",
     "module": "es/index.js",
@@ -61,9 +61,9 @@
     "author": "huoyuxuan,liushaozhen",
     "license": "MIT",
     "dependencies": {
-        "@osui/button": "^0.10.1",
-        "classnames": "^2.2.6",
-        "@osui/icons": "^0.10.0"
+        "@osui/button": "^0.10.2",
+        "@osui/icons": "^0.10.1",
+        "classnames": "^2.2.6"
     },
     "publishConfig": {
         "access": "public",
