--- a/packages/ui/select/package.json
+++ b/packages/ui/select/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/select",
-    "version": "0.10.0",
+    "version": "0.10.1",
     "description": "",
     "main": "es/index.js",
     "module": "es/index.js",
@@ -55,8 +55,8 @@
         "react-dom": ">=16.9.0"
     },
     "dependencies": {
-        "classnames": "^2.2.6",
-        "@osui/icons": "^0.10.0"
+        "@osui/icons": "^0.10.1",
+        "classnames": "^2.2.6"
     },
     "repository": {
         "type": "git",
