--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/ui",
-    "version": "0.10.1",
+    "version": "0.10.2",
     "description": "",
     "main": "es/index.js",
     "module": "es/index.js",
@@ -51,36 +51,36 @@
     },
     "dependencies": {
         "@osui/affix": "^0.10.0",
-        "@osui/alert": "^0.10.0",
+        "@osui/alert": "^0.10.1",
         "@osui/anchor": "^0.10.0",
         "@osui/auto-complete": "^0.10.0",
-        "@osui/avatar": "^0.10.0",
-        "@osui/back-top": "^0.10.0",
+        "@osui/avatar": "^0.10.1",
+        "@osui/back-top": "^0.10.1",
         "@osui/badge": "^0.10.0",
-        "@osui/branch-dropdown": "^0.10.1",
+        "@osui/branch-dropdown": "^0.10.2",
         "@osui/brand-provider": "^0.10.0",
         "@osui/breadcrumb": "^0.10.0",
-        "@osui/button": "^0.10.1",
+        "@osui/button": "^0.10.2",
         "@osui/calendar": "^0.10.0",
         "@osui/card": "^0.10.0",
         "@osui/carousel": "^0.10.0",
         "@osui/cascader": "^0.10.0",
         "@osui/checkbox": "^0.10.1",
         "@osui/col": "^0.10.0",
-        "@osui/collapse": "^0.10.1",
+        "@osui/collapse": "^0.10.2",
         "@osui/comment": "^0.10.0",
         "@osui/config-provider": "^0.10.0",
         "@osui/date-picker": "^0.10.0",
         "@osui/descriptions": "^0.10.0",
         "@osui/directory-navigator": "^0.10.0",
         "@osui/divider": "^0.10.0",
-        "@osui/drawer": "^0.10.0",
-        "@osui/dropdown": "^0.10.0",
+        "@osui/drawer": "^0.10.1",
+        "@osui/dropdown": "^0.10.1",
         "@osui/empty": "^0.10.0",
         "@osui/form": "^0.10.0",
         "@osui/gap": "^0.10.0",
         "@osui/grid": "^0.10.0",
-        "@osui/icons": "^0.10.0",
+        "@osui/icons": "^0.10.1",
         "@osui/image": "^0.10.0",
         "@osui/input": "^0.10.0",
         "@osui/input-number": "^0.10.0",
@@ -89,12 +89,12 @@
         "@osui/markdown": "^0.10.0",
         "@osui/mentions": "^0.10.0",
         "@osui/menu": "^0.10.0",
-        "@osui/menu-dropdown": "^0.10.0",
-        "@osui/message": "^0.10.0",
-        "@osui/modal": "^0.10.1",
+        "@osui/menu-dropdown": "^0.10.1",
+        "@osui/message": "^0.10.1",
+        "@osui/modal": "^0.10.2",
         "@osui/notification": "^0.10.0",
-        "@osui/page-header": "^0.10.0",
-        "@osui/pagination": "^0.10.1",
+        "@osui/page-header": "^0.10.1",
+        "@osui/pagination": "^0.10.2",
         "@osui/popconfirm": "^0.10.0",
         "@osui/popover": "^0.10.0",
         "@osui/progress": "^0.10.0",
@@ -102,8 +102,8 @@
         "@osui/rate": "^0.10.0",
         "@osui/result": "^0.10.0",
         "@osui/row": "^0.10.0",
-        "@osui/search-select-list": "^0.10.0",
-        "@osui/select": "^0.10.0",
+        "@osui/search-select-list": "^0.10.1",
+        "@osui/select": "^0.10.1",
         "@osui/skeleton": "^0.10.0",
         "@osui/slider": "^0.10.0",
         "@osui/space": "^0.10.0",
@@ -111,19 +111,19 @@
         "@osui/statistic": "^0.10.0",
         "@osui/steps": "^0.10.0",
         "@osui/switch": "^0.10.1",
-        "@osui/table": "^0.10.1",
+        "@osui/table": "^0.10.2",
         "@osui/tabs": "^0.10.0",
-        "@osui/tag": "^0.10.0",
+        "@osui/tag": "^0.10.1",
         "@osui/time-picker": "^0.10.0",
         "@osui/timeline": "^0.10.0",
-        "@osui/toggle-button": "^0.10.0",
+        "@osui/toggle-button": "^0.10.1",
         "@osui/tooltip": "^0.10.0",
         "@osui/transfer": "^0.10.0",
         "@osui/tree": "^0.10.1",
         "@osui/tree-select": "^0.10.0",
-        "@osui/typography": "^0.10.0",
+        "@osui/typography": "^0.10.1",
         "@osui/upload": "^0.10.0",
-        "@osui/version": "0.10.0",
+        "@osui/version": "^0.10.1",
         "classnames": "^2.2.6",
         "github-markdown-css": "^4.0.0",
         "lodash.partial": "^4.2.1",
