chore: 允许hot-fix分支发布

--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,7 @@
     "useWorkspaces": true,
     "command": {
         "version": {
-            "allowBranch": "master",
+            "allowBranch": ["master", "hot-fix"],
             "ignoreChanges": [
                 "**/*.md",
                 "**/stories/**",
