feat: 新增highlight-text组件
Change-Id: Ia5cf81f5f883f5ef96e874943633ef2dae570d34

--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -81,6 +81,7 @@
         "@osui/form": "^0.11.4",
         "@osui/gap": "^0.11.3",
         "@osui/grid": "^0.11.0",
+        "@osui/highlight-text": "0.10.0",
         "@osui/image": "^0.11.0",
         "@osui/input": "^0.11.2",
         "@osui/input-number": "^0.11.3",
