fix: auto-complete增加highlightKeyword属性
Change-Id: I80f407f005406b8b750244cd9646e4d05bdfc841

--- a/packages/ui/auto-complete/package.json
+++ b/packages/ui/auto-complete/package.json
@@ -69,5 +69,9 @@
     "publishConfig": {
         "access": "public",
         "registry": "https://registry.npmjs.com"
+    },
+    "dependencies": {
+        "@huse/derived-state": "^1.0.3",
+        "@osui/highlight-text": "0.10.0"
     }
 }
