--- a/packages/ui/highlight-text/package.json
+++ b/packages/ui/highlight-text/package.json
@@ -71,5 +71,7 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "dependencies": {}
+    "dependencies": {
+        "classnames": "^2.2.6"
+    }
 }
