fix: input增加Input.Search支持icon的形式
Change-Id: If5fe67e8210b8144551b4ca5ca8be5787cf81a6b

--- a/packages/ui/input/package.json
+++ b/packages/ui/input/package.json
@@ -66,7 +66,9 @@
         }
     },
     "dependencies": {
-        "classnames": "^2.2.6"
+        "@osui/brand-provider": "^0.11.4",
+        "classnames": "^2.2.6",
+        "rc-util": "^5.9.8"
     },
     "publishConfig": {
         "access": "public",
