chore: osui-theme css vars拆分
Change-Id: If2f2fe0ad86b983ccc03b6c647759c8496eac251

--- a/packages/ui-theme/osui-theme/tsconfig.json
+++ b/packages/ui-theme/osui-theme/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "extends": "../../../tsconfig.json",
     "compilerOptions": {
-        "rootDir": "./src",
-        "outDir": "./tmp"
+        "rootDir": "./variables",
+        "outDir": "./vars",
+        "module": "commonjs",
     },
-    "include": ["src"]
+    "include": ["./variables"]
 }
