--- a/packages/ui-theme/osui-theme/package.json
+++ b/packages/ui-theme/osui-theme/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@osui/theme",
-  "version": "0.13.0",
+  "version": "1.0.0-beta.0",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/theme/index.js",
+  "module": "dist/theme/index.js",
+  "types": "dist/theme/index.d.ts",
   "scripts": {
     "lint": "skr lint",
-    "build": "node scripts/build.js && sh scripts/build.sh",
+    "build": "sh scripts/build.sh",
     "prepack": "yarn build",
     "storybook": "start-storybook -p 8700",
     "clean": "rm -rf node_modules && rm -rf dist",
@@ -35,7 +36,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
-    "typescript": "^3.9.6"
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
     "antd": ">=3.0.0"
