fix: Menu Table TreeSelect用hoistNonReactStatic提升属性
Change-Id: I4950441928e11d87913bd3e2ec86511ac95a0b2a

--- a/packages/ui/menu/package.json
+++ b/packages/ui/menu/package.json
@@ -71,5 +71,8 @@
     "publishConfig": {
         "access": "public",
         "registry": "https://registry.npmjs.com"
+    },
+    "dependencies": {
+        "hoist-non-react-statics": "^3.3.2"
     }
 }
