fix: 修复tree-select build的问题
Change-Id: I01651d3b843454fdd072e34ebc44a8ad4f196b83

--- a/packages/ui/tree-select/package.json
+++ b/packages/ui/tree-select/package.json
@@ -1,13 +1,16 @@
 {
     "name": "@osui/tree-select",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
     "types": "es/index.d.ts",
     "files": [
         "es",
-        "src"
+        "lib",
+        "src",
+        "README.md",
+        "CHANGELOG.md"
     ],
     "scripts": {
         "lint": "skr lint",
