fix: input样式问题调整
Change-Id: I040d3d4c3396d365c25c9306f834503371903987

--- a/packages/ui/input/package.json
+++ b/packages/ui/input/package.json
@@ -70,6 +70,7 @@
     "dependencies": {
         "@osui/brand-provider": "^1.0.0",
         "classnames": "^2.2.6",
+        "hoist-non-react-statics": "^3.3.2",
         "rc-util": "^5.9.8"
     },
     "publishConfig": {
