--- a/packages/ui-icons/icons-builder/package.json
+++ b/packages/ui-icons/icons-builder/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "generate": "node -r esm build/generate.js",
-    "clean": "rm -rf node_modules"
+    "clean": "rm -rf node_modules",
+    "test": "echo 'none'"
   },
   "keywords": [
     "svg",
