--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "cz-conventional-changelog": "^3.2.0",
         "enzyme-adapter-react-16": "^1.15.6",
         "enzyme-to-json": "^3.6.2",
+        "eslint-plugin-import": "^2.24.0",
         "husky": "^4.2.5",
         "lerna": "^3.22.1",
         "mkdirp": "^1.0.4",
