--- a/packages/ui/breadcrumb/package.json
+++ b/packages/ui/breadcrumb/package.json
@@ -65,6 +65,9 @@
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
     },
+    "dependencies": {
+        "classnames": "^2.2.6"
+    },
     "repository": {
         "type": "git",
         "url": "https://gitee.com/gitee-fe/osui/tree/master"
