--- a/packages/ui/cascader/package.json
+++ b/packages/ui/cascader/package.json
@@ -61,9 +61,13 @@
         "typescript": "^3.9.6"
     },
     "peerDependencies": {
+        "@osui/icons": "^1.1.1",
         "antd": ">=4.4.0 <4.17.0",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
+    },
+    "dependencies": {
+        "classnames": "^2.2.6"
     },
     "repository": {
         "type": "git",
