--- a/packages/ui/form/package.json
+++ b/packages/ui/form/package.json
@@ -82,6 +82,7 @@
     },
     "gitHead": "904178b6c0bb86963017122daa529580decb66e8",
     "dependencies": {
-        "@osui/brand-provider": "^1.1.1"
+        "@osui/brand-provider": "^1.1.1",
+        "classnames": "^2.2.6"
     }
 }
