--- a/packages/ui/menu/package.json
+++ b/packages/ui/menu/package.json
@@ -61,6 +61,7 @@
         "typescript": "^3.9.6"
     },
     "peerDependencies": {
+        "@osui/icons": "^1.1.1",
         "antd": ">=4.4.0 <4.17.0",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
@@ -81,6 +82,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "dependencies": {
+        "classnames": "^2.2.6",
         "hoist-non-react-statics": "^3.3.2"
     }
 }
