--- a/packages/ui/page-header/package.json
+++ b/packages/ui/page-header/package.json
@@ -61,6 +61,7 @@
         "typescript": "^3.9.6"
     },
     "peerDependencies": {
+        "@osui/icons": "^1.1.1",
         "antd": ">=4.4.0 <4.17.0",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
@@ -81,6 +82,6 @@
         "registry": "https://registry.npmjs.com"
     },
     "dependencies": {
-        "@osui/icons": "^1.1.1"
+        "classnames": "^2.2.6"
     }
 }
