--- a/packages/ui/progress/package.json
+++ b/packages/ui/progress/package.json
@@ -72,6 +72,7 @@
     "author": "huoyuxuan,liushaozhen",
     "license": "MIT",
     "dependencies": {
+        "@osui/brand-provider": "^1.1.1",
         "classnames": "^2.2.6"
     },
     "publishConfig": {
