--- a/packages/ui/quick-edit/package.json
+++ b/packages/ui/quick-edit/package.json
@@ -82,6 +82,9 @@
     },
     "dependencies": {
         "@huse/derived-state": "^1.1.0",
+        "@osui/input": "^1.1.1",
+        "@osui/select": "^1.1.1",
+        "classnames": "^2.2.6",
         "hoist-non-react-statics": "^3.3.2",
         "react-abstract-quick-edit": "^0.0.7"
     }
