--- a/packages/ui/rate/package.json
+++ b/packages/ui/rate/package.json
@@ -81,6 +81,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "dependencies": {
+        "classnames": "^2.2.6",
         "hoist-non-react-statics": "^3.3.2"
     }
 }
