--- a/packages/ui/tabs/package.json
+++ b/packages/ui/tabs/package.json
@@ -61,6 +61,7 @@
         "typescript": "^3.9.6"
     },
     "peerDependencies": {
+        "@osui/icons": "^1.1.1",
         "antd": ">=4.4.0 <4.17.0",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
@@ -82,6 +83,7 @@
     },
     "gitHead": "904178b6c0bb86963017122daa529580decb66e8",
     "dependencies": {
+        "classnames": "^2.2.6",
         "hoist-non-react-statics": "^3.3.2"
     }
 }
