--- a/packages/ui/toggle-button/package.json
+++ b/packages/ui/toggle-button/package.json
@@ -78,7 +78,8 @@
     },
     "dependencies": {
         "@huse/derived-state": "^1.0.1",
-        "@osui/icons": "^1.1.1"
+        "@osui/icons": "^1.1.1",
+        "classnames": "^2.2.6"
     },
     "publishConfig": {
         "access": "public",
