fix: 修复form errorlist的问题
Change-Id: I4237dc07258e83098e98a6fe25e3794c6b1d85a6

--- a/packages/ui/form/package.json
+++ b/packages/ui/form/package.json
@@ -43,6 +43,11 @@
         "@types/jest": "^26.0.24",
         "@types/react-dom": "^16.9.8",
         "@types/react-test-renderer": "^17.0.1",
+        "@osui/button": "^1.1.2",
+        "@osui/divider": "^1.1.1",
+        "@osui/input": "^1.1.2",
+        "@osui/input-number": "^1.1.2",
+        "@osui/radio": "^1.1.1",
         "antd": "^4.16.10",
         "babel-loader": "^8.1.0",
         "babel-merge": "^3.0.0",
