fix: popover 关闭icon调整
Change-Id: I2d4c92b06e41cb5c378af4e74e0194169e1ce458

--- a/packages/ui/popover/package.json
+++ b/packages/ui/popover/package.json
@@ -66,6 +66,7 @@
         "react-dom": ">=16.9.0"
     },
     "dependencies": {
+        "@osui/icons": "^1.1.1",
         "classnames": "^2.2.6"
     },
     "repository": {
