fix: page-header调整
Change-Id: I4e934063a654204f79cb33e51659a06f7ca2c5b7

--- a/packages/ui/page-header/package.json
+++ b/packages/ui/page-header/package.json
@@ -82,6 +82,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "dependencies": {
+        "@osui/icons-icloud": "^1.1.1",
         "classnames": "^2.2.6"
     }
 }
