--- a/packages/ui-theme/osui-theme/package.json
+++ b/packages/ui-theme/osui-theme/package.json
@@ -11,7 +11,7 @@
     "prepack": "yarn build",
     "storybook": "start-storybook -p 8700",
     "clean": "rm -rf node_modules && rm -rf dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo 'no tests yet'"
   },
   "files": [
     "dist"
