--- a/packages/ui/alert/package.json
+++ b/packages/ui/alert/package.json
@@ -80,6 +80,7 @@
     "dependencies": {
         "@huse/boolean": "^1.0.3",
         "@huse/timeout": "^1.0.2",
+        "@osui/icons": "^1.1.1",
         "@types/hoist-non-react-statics": "^3.3.1",
         "classnames": "^2.2.6",
         "hoist-non-react-statics": "^3.3.2"
