--- a/packages/ui/avatar/package.json
+++ b/packages/ui/avatar/package.json
@@ -47,6 +47,7 @@
         "@types/react-dom": "^16.9.8",
         "@types/react-test-renderer": "^17.0.1",
         "antd": "^4.16.10",
+        "babel-jest": "^27.2.1",
         "babel-loader": "^8.1.0",
         "babel-merge": "^3.0.0",
         "cpy-cli": "^3.1.1",
